# Motion-Planning-for-Mobile-Robots

./: .gitignore  README.md
hw_1/catkin_ws/devel/lib/grid_path_searcher/: demo_node
hw_1/catkin_ws/devel/lib/pkgconfig/: grid_path_searcher.pc
hw_1/catkin_ws/devel/lib/waypoint_generator/: waypoint_generator
hw_1/catkin_ws/devel/share/rviz_plugins/cmake/: rviz_pluginsConfig.cmake
hw_1/catkin_ws/src/grid_path_searcher/: CMakeLists.txt  README.md
hw_1/catkin_ws/src/grid_path_searcher/include/: Astar_searcher.h  JPS_searcher.h  JPS_utils.h  node.h
hw_1/catkin_ws/src/grid_path_searcher/src/: Astar_searcher.cpp  demo_node.cpp  random_complex_generator.cpp
hw_1/catkin_ws/src/grid_path_searcher/src/read_only/: JPS_utils.cpp
hw_2/: HW_2_MATLAB.docx
hw_2/hw_2/: week2.docx
hw_2/hw_2/matlab/: README.txt
hw_2/hw_2/matlab/code/: A_star_search.m  obstacle_map.m  visualize_map.m
hw_2/hw_2/matlab/code/A_star/: expand_array.m  node_index.m
hw_2/matlab/code/: main.m
hw_2/matlab/code/A_star/: distance.m  insert_open.m  min_fn.m
hw_2/ros/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
hw_2/ros/catkin_ws/devel/lib/grid_path_searcher/: random_complex
hw_2/ros/catkin_ws/devel/lib/pkgconfig/: rviz_plugins.pc  waypoint_generator.pc
hw_3/: MATLAB.docx  ROS.docx
hw_3/hw_3/: note.txt
hw_3/hw_3/Matlab/: RRT.m  collisionChecking.m
hw_3/hw_3/Ros/: testResultRRT
hw_3/hw_3/Ros/src/grid_path_searcher/: CMakeLists.txt
hw_3/hw_3/Ros/src/grid_path_searcher/include/: node.h
hw_3/hw_3/Ros/src/grid_path_searcher/launch/: demo.launch
hw_3/hw_3/Ros/src/grid_path_searcher/launch/rviz_config/: demo.rviz  jps_demo.rviz
hw_3/hw_3/Ros/src/grid_path_searcher/src/: demo_node.cpp
hw_3/ros/catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
hw_3/ros/catkin_ws/src/grid_path_searcher/: CMakeLists.txt  package.xml
hw_4/: hw4 _part_1.docx
hw_4/hw_4/: hw4.docx
hw_4/ros/: hw4.docx
hw_4/ros/catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
hw_4/ros/catkin_ws/src/grid_path_searcher/: CMakeLists.txt
hw_5/: SelectionMatrix.xlsx
hw_5/hw_5/: Matlab_Homework.docx
hw_5/hw_5/matlab/: MinimumSnapQPSolver.m  figure_genator.m  getAbeq.m  getCt.m  getM.m  getQ.m  hw1_1.m  hw1_2.m
hw_5/hw_5/ros/src/waypoint_trajectory_generator/: CMakeLists.txt  package.xml
hw_5/hw_5/ros/src/waypoint_trajectory_generator/launch/: test.launch
hw_5/hw_5/ros/src/waypoint_trajectory_generator/launch/rviz_config/: test_traj.rviz
hw_5/hw_5/ros/src/waypoint_trajectory_generator/src/: trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp  trajectory_generator_waypoint.h
hw_5/matlab/: MinimumSnapCloseformSolver.m  figure_genator.m  getAbeq.m  getCoeff.m  getCt.m  getM.m  getQ.m  hw1_1.m  hw1_2.m  hw5_1.fig
hw_5/ros/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
hw_5/ros/devel/include/quadrotor_msgs/: AuxCommand.h  Bspline.h  Corrections.h  Gains.h  Odometry.h  OptimalTimeAllocator.h  OutputData.h  PPROutputData.h  PolynomialTrajectory.h  PositionCommand.h  Replan.h  ReplanCheck.h  SO3Command.h  Serial.h  SpatialTemporalTrajectory.h  StatusData.h  SwarmCommand.h  SwarmInfo.h  SwarmOdometry.h  TRPYCommand.h  TrajectoryMatrix.h
hw_5/ros/devel/lib/pkgconfig/: quadrotor_msgs.pc  rviz_plugins.pc  waypoint_generator.pc  waypoint_trajectory_generator.pc
hw_5/ros/devel/lib/waypoint_generator/: waypoint_generator
hw_5/ros/src/waypoint_generator/src/: waypoint_generator.cpp
hw_5/ros/src/waypoint_trajectory_generator/src/: trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp  trajectory_generator_waypoint.h
hw_6/: HW_6.docx
hw_6/hw6/update_code/: getM.m  getQM.m  nearestSPD.m  ts_all_1_position.fig  ts_all_1_pvaj.fig
hw_6/update_code/: getAbeq.m  getAbieq.m  getQM.m  hw6.m  ts_13241_position.fig  ts_all_13241_pvaj.fig
hw_7/MP-HW7/: Example_code.docx  HW_7_Kailin.docx  dynamic_programming.py  graph_node.py  racetracks.py
hw_8/: MPC_example.m
(+137 files in other folders)
